2007-08-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/uk/index.html: Updated Ukrainian translations.

2007-06-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/uk/start.html: Added Ukrainian translations of the internal
	help system.

2007-05-24  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented the new
	constant "q" and the vt() function.

2007-03-31  Stefan Jahn  <stefan@lkcc.org>

	* docs/qucsveri.1: Added manpage for the qucsveri wrapper
	script for digital simulations.

2007-03-13  Stefan Jahn  <stefan@lkcc.org>

	* docs/ru/start_opt.html: Added Russian translations of
	optimization dialogs.

2007-03-04 Gopala Krishna <krishna.ggk@gmail.com>

	* qucshelp.cpp, qucshelp.h: Fixed few crashes and navigation bugs.

2007-03-04  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/start_opt.html: Translated optimization introduction
	into German.

2006-08-26  Stefan Jahn  <stefan@lkcc.org>

	* qucshelp.cpp (setupActions): Made some more user visible
	strings translatable.  Renamed the "Sidebar" into "Table of
	Contents".

2006-08-12  Gopala Krishna   <krishna.ggk@gmail.com>

	* qucshelp is an application now
	* added toolbar, statusbar and history

2006-05-23  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/mathfunc.html: Completed German translation for math
	functions.

2006-05-22  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (SUBDIRS): Added ru sub-directory.

	* docs/ru/index.html: Added Russian translations of the
	internal help system.  Thanks to Igor.

	* docs/en/mathfunc.html: Documented Freq2Time() and Time2Freq().
	Also fixed descriptions of fft, iff, dft and idft.  Added the
	two-argument descriptions of arctan, max and min.

2006-02-05  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Documented new xvalue(), yvalue() and
	min(), max() and avg() functions with range specifications. 
	Also explained how to use ranges.

2006-01-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/qucsdigi.1: Fixed documentation of command line